BSB/force-app/main/default/objects/Prestation__c/Prestation__c.object-meta.xml
<CustomObject>
    <label>Prestation</label>
    <nameField>
        <label>Nom de Prestation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prestations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>