BSB/force-app/main/default/objects/Prestation__c/fields/Acompte_pay__c.field-meta.xml
<CustomField>
    <fullName>Acompte_pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acompte payé</label>
    <type>Checkbox</type>
</CustomField>