BSB/force-app/main/default/objects/Prestation__c/fields/Annee_de_cloture_de_la_prestation_BSB__c.field-meta.xml
<CustomField>
    <fullName>Annee_de_cloture_de_la_prestation_BSB__c</fullName>
    <formula>TEXT(YEAR( Date_de_cloture_de_la_prestation_BSB__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Année de cloture de la prestation BSB</label>
    <type>Text</type>
</CustomField>