BSB/force-app/main/default/objects/Prestation__c/fields/Date_d_ouverture_de_la_prestation_BSB__c.field-meta.xml
<CustomField>
    <fullName>Date_d_ouverture_de_la_prestation_BSB__c</fullName>
    <label>Date d&apos;ouverture de la prestation BSB</label>
    <type>Date</type>
</CustomField>