BSB/force-app/main/default/objects/Prestation__c/fields/Date_de_cloture_de_la_prestation_BSB__c.field-meta.xml
<CustomField>
    <fullName>Date_de_cloture_de_la_prestation_BSB__c</fullName>
    <label>Date de cloture de la prestation BSB</label>
    <type>Date</type>
</CustomField>