BSB/force-app/main/default/objects/Prestation__c/fields/Departement__c.field-meta.xml
<CustomField>
    <fullName>Departement__c</fullName>
    <formula>MID( Nom_du_porteur_de_la_prestation__r.ShippingPostalCode , 1, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Département</label>
    <type>Text</type>
</CustomField>