BSB/force-app/main/default/objects/Prestation__c/fields/Facture__c.field-meta.xml
<CustomField>
    <fullName>Facture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facturé</label>
    <type>Checkbox</type>
</CustomField>