BSB/force-app/main/default/objects/Prestation__c/fields/Factures_reglees__c.field-meta.xml
<CustomField>
    <fullName>Factures_reglees__c</fullName>
    <label>Facture(s) réglée(s)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>