BSB/force-app/main/default/objects/Prestation__c/fields/Nom_du_porteur_de_la_prestation__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_porteur_de_la_prestation__c</fullName>
    <label>Nom du compte porteur de la prestation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prestations</relationshipLabel>
    <relationshipName>Prestations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>