BSB/force-app/main/default/objects/Prestation__c/fields/Numero_de_la_prestation__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_la_prestation__c</fullName>
    <label>Numéro de la prestation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>