BSB/force-app/main/default/objects/Prestation__c/fields/Projet__c.field-meta.xml
<CustomField>
    <fullName>Projet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projet</label>
    <referenceTo>Projet__c</referenceTo>
    <relationshipLabel>Prestations</relationshipLabel>
    <relationshipName>Prestations</relationshipName>
    <type>Lookup</type>
</CustomField>