BSB/force-app/main/default/objects/Prestation__c/fields/Reference_devis__c.field-meta.xml
<CustomField>
    <fullName>Reference_devis__c</fullName>
    <label>Référence devis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>