BSB/force-app/main/default/objects/Prestation__c/fields/References_facture__c.field-meta.xml
<CustomField>
    <fullName>References_facture__c</fullName>
    <label>Références facture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>